Story 3.7: review patch -- missing pairs stay missing under H1, and the choice is validated on fresh sequences
From the three reviews:
- H1's tilt turned a share of missing pairs into wins, so the alternative
  voided less often than a real better Brain would. Missing pairs now stay
  missing, and the tilt over the reached pairs is q = 2(p1 - 1/2)/(1 - m);
  the page prints each cell's simulated H1 mean beside its p1.
- The chosen cell's rates were quoted from the sequences it was chosen on.
  They are now quoted from 10,000 fresh ones: false-accept 5.73%,
  false-reject 3.99%, power 92.6%. The false-accept rate above nominal is
  stated on the methodology page.
- A missing cap of 0.20 joins the grid; it voids one result in six.
- read() requires every key and the stated Run count; extract() refuses a
  folder that mixes Brains, tags or caps, an index that does not cover its
  Seed set, a chain the log does not end on, and a log outside the folder;
  the table records the Brain's configuration and ascended, and names its
  own command.
- CHOSEN is a constant the test holds the rule's choice to; the page
  carries the seed and count it was simulated with; decoding no longer
  leans on the enum order; the simulation count is bounded.
- :rig:test takes the methodology page as an input.